--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,9 +1,9 @@
-<h1>The Best Movies According to Angela</h1>
-<h2>My top 3 movies of all-time.</h2>
+<h1>The Best Movie Acccording to Clinton</h1> 
+<h2>My top 3 movie of all-times.</h2>
 <hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+<h3>Battle through the heaven</h3>
+<p>This is a very interesting anime i love.</p>
+<h3>The mummy</h3>
+<p>Very interesting eghptian movie and a horro movie.</p>
+<h3>Terminator</h3>
+<p>A very interesting action movie.</p>
